fix text being behind image

--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -1,12 +1,13 @@
 /* aerial2 1 */
 
 .Landing {
-    position: absolute;
-    width : 100%;
-    height : 100%;
-    z-index: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 
 .text {
-    z-index: 1;
+  position: relative;
+  z-index: 1;
 }
